--- a/estilos.css
+++ b/estilos.css
@@ -1,9 +1,11 @@
 body {
     margin: 0;
     padding: 0;
+    width: 100%;
 }
 
 .primer_contenedor {
+    
     padding: 1.8rem;
 }
 
@@ -19,10 +21,11 @@ body {
 
 .menu_li li{
     list-style:none;
+    padding: 0.5rem;
 }
 .menu_li li:hover {
     background-color: red;
-    padding: 0.5rem;
+    
     color: white;
     border-radius: 5%;
 }
@@ -31,15 +34,19 @@ body {
     position: relative;
     width: 100%;
     height: auto;
+    background-image: url(images/pic01.jpg);
+    background-position: center;
+   
+    background-size: 69rem;
 }
-.howdy_background img {
+ /*.howdy_background img {
     /* background-image: url(images/pic01.jpg);
-    height: 60rem;  */
+    height: 60rem;  
     width: 100%;
     height: 25rem;
     
 
-} 
+}  */
 
 .howdy_cuadrado {
     position: absolute;
@@ -66,6 +73,71 @@ body {
     margin: 0;
 }
 
-/* .logo_centro {
-    box-shadow: 5px 10px inset;
-} */
+.logo_centro {
+    box-shadow: 12px 0 15px -4px rgba(31, 73, 125, 0.3),  
+                -12px 0 8px -4px rgba(31, 73, 125, 0.3);
+                /* 12px 0px 32px 0px rgb(255 255 255 / 15%), 
+                -12px 0px 0px 0px rgb(94 92 92 / 0.15),
+                -12px 0px 0px 0px rgb(255 255 255 / 15%), 
+                12px 0px 32px 0px rgba(94, 92, 92, 0.15) */
+}
+
+.imagen_espacio {
+    padding: 2rem;
+    width: 35%
+}
+
+.botones_div {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    margin-bottom: 5rem;
+}
+
+.boton1, .boton2{
+    background-color: red;
+    color: white;
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding: 1rem 5rem;
+    border: none;
+    border-radius: 5%;
+}
+
+.boton2 {
+    background-color: black;
+}
+
+.contenedor_cuatro {
+    width: 100%;
+    background-color: rgb(240, 230, 230);
+}
+.portafolio{
+    display: flex;
+    width: 95%;
+    gap: 0.9rem;
+    padding: 2rem;
+}
+
+.hr {
+    flex-grow: 0.5;
+    border: none;
+    border-bottom: 1px solid rgb(31, 30, 30);
+    height: 1.5rem;
+  
+}
+
+.portafolio_imagenes {
+    display: flex;
+   flex-wrap: wrap;
+    gap: 2rem;
+   justify-content: center;
+   
+}
+.portafolio_imagenes_div {
+    width: 30%;
+}
+.portafolio_imagenes_div img {
+    width: 100%;
+    
+}
