--- a/estilos.css
+++ b/estilos.css
@@ -111,16 +111,18 @@ body {
 .contenedor_cuatro {
     width: 100%;
     background-color: rgb(240, 230, 230);
+    padding-bottom: 2.5rem;
 }
 .portafolio{
     display: flex;
-    width: 95%;
-    gap: 0.9rem;
+    width: 90%; 
+     gap: 1rem; 
     padding: 2rem;
+    margin: 0 auto;
 }
 
 .hr {
-    flex-grow: 0.5;
+    flex-grow: 0.43;
     border: none;
     border-bottom: 1px solid rgb(31, 30, 30);
     height: 1.5rem;
@@ -130,14 +132,93 @@ body {
 .portafolio_imagenes {
     display: flex;
    flex-wrap: wrap;
-    gap: 2rem;
+    gap: 4rem;
    justify-content: center;
    
 }
-.portafolio_imagenes_div {
-    width: 30%;
-}
-.portafolio_imagenes_div img {
+
+.portafolio_imagenes_div_img {
     width: 100%;
+       
+}
+
+.portafolio_imagenes_div {
+    width: 25%;
+    background-color: white;
+    padding-bottom: 2.5rem;
+    border-bottom: 1px solid rgb(172, 168, 168);
+}
+
+
+.portafolio_enlace {
+    background-color: black;
+    color: white;
+    padding: 0.8rem;
+    text-decoration: none;
+    border-radius: 5%;
+    font-weight: bold;
+} 
+
+.portafolio_imagenes_div h3, p {
+    padding: 1.5rem;
+    margin: 0;
+
     
+}
+.portafolio_imagenes_div p {
+    padding-top: 0.6rem;
+    font-size: 1.2rem;
+    color: rgb(129, 124, 124);
+    line-height: 2rem;
+    
+} 
+
+
+.portafolio_enlace_div {
+    padding: 1.5rem;
+}
+
+.contenedor_blog {
+    display: flex;
+    justify-content: center;
+    gap: 4rem;
+}
+
+.blog_enlace {
+    display: flex;
+    /* justify-content: center; */
+    gap: 2rem;
+    margin-bottom: 5rem;
+    padding: 1.5rem;
+}
+
+.blog_enlace li {
+    font-size: 1rem;
+    font-weight: bold;
+    padding: 1rem 3rem;
+    border: none;
+    border-radius: 4%;
+    list-style: none;
+}
+
+.blog_enlace li a {
+    text-decoration: none;
+    color: white;
+}
+
+.boton_blog1 {
+    background-color: red;
+}
+
+.boton_blog2 {
+    background-color: black;
+}
+
+.blog_imagenes_div {
+    width: 40%;
+}
+
+.iconos {
+    width: 2rem;
+    gap: 2rem
 }
