--- a/estilos.css
+++ b/estilos.css
@@ -33,8 +33,8 @@ body {
 .howdy_background {
     position: relative;
     width: 100%;
-    height: auto;
-    background-image: url(images/pic01.jpg);
+    height: 10rem;
+    background-image: url("./images/pic01.jpg");
     background-position: center;
    
     background-size: 69rem;
@@ -195,7 +195,7 @@ body {
 .blog_enlace li {
     font-size: 1rem;
     font-weight: bold;
-    padding: 1rem 3rem;
+    padding: 1rem 3rem; 
     border: none;
     border-radius: 4%;
     list-style: none;
@@ -204,10 +204,14 @@ body {
 .blog_enlace li a {
     text-decoration: none;
     color: white;
+    font-size: 1.5rem;
+    position: relative;
+    
 }
 
 .boton_blog1 {
     background-color: red;
+    
 }
 
 .boton_blog2 {
@@ -216,9 +220,43 @@ body {
 
 .blog_imagenes_div {
     width: 40%;
+    
 }
 
-.iconos {
-    width: 2rem;
-    gap: 2rem
+
+
+.enlace_imagen1::before {
+    content: url("./images/icono1.png");
+    margin-right: 0.5rem;
+    margin-left: -1.5rem;
 }
+
+.enlace_imagen2::before {
+    content: url("./images/icono2.png");
+    margin-right: 0.5rem;
+    margin-left: -1.5rem;
+}
+
+/* .footer {
+    background-color: black;
+    color: white;
+}
+
+.footer_ul {
+    list-style: none;
+    display: block;
+    position: absolute;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+
+.fecha {
+    background-color: red;
+    padding: 0.5rem;
+    display: block;
+    position: absolute;
+    height: 3.5rem;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    
+} */
