--- a/estilos.css
+++ b/estilos.css
@@ -29,17 +29,18 @@ body {
     color: white;
     border-radius: 5%;
 }
-
+/*
 .howdy_background {
     position: relative;
     width: 100%;
-    height: 10rem;
+    height: auto;
     background-image: url("./images/pic01.jpg");
     background-position: center;
    
     background-size: 69rem;
+
 }
- /*.howdy_background img {
+ .howdy_background img {
     /* background-image: url(images/pic01.jpg);
     height: 60rem;  
     width: 100%;
@@ -47,8 +48,18 @@ body {
     
 
 }  */
+.howdy_background{
+    background: #CCE8F4 url(./images/pic01.jpg);
+    background-position: center center;
+    background-size: auto 100%;
+    background-repeat: no-repeat;
+    text-align: center;
+    position: relative;
+    padding: 8em 0;
+    margin: 4em 0 0 0;
+}
 
-.howdy_cuadrado {
+/*.howdy_cuadrado {
     position: absolute;
     background-color: black;
     color: white;
@@ -56,9 +67,16 @@ body {
     left: 50%;
     height: 25%;
     width: 30%;
-    margin: -15% 0 0 -15%;
+    margin: 0 auto;
     text-align: center;
     
+}*/
+.howdy_cuadrado{
+    background-color: black;
+    display: inline-block;
+    padding: 2.5em 5em;
+    border-radius: 5px;
+    color: white;
 }
 
 .howdy_cuadrado p {
@@ -73,14 +91,17 @@ body {
     margin: 0;
 }
 
+
 .logo_centro {
     box-shadow: 12px 0 15px -4px rgba(31, 73, 125, 0.3),  
                 -12px 0 8px -4px rgba(31, 73, 125, 0.3);
                 /* 12px 0px 32px 0px rgb(255 255 255 / 15%), 
                 -12px 0px 0px 0px rgb(94 92 92 / 0.15),
                 -12px 0px 0px 0px rgb(255 255 255 / 15%), 
-                12px 0px 32px 0px rgba(94, 92, 92, 0.15) */
+                12px 0px 32px 0px rgba(94, 92, 92, 0.15)*/
 }
+ 
+
 
 .imagen_espacio {
     padding: 2rem;
@@ -237,11 +258,11 @@ body {
     margin-left: -1.5rem;
 }
 
-/* .footer {
-    background-color: black;
+ .footer {
+    background-color:rgb(37,33,34);
     color: white;
 }
-
+/*
 .footer_ul {
     list-style: none;
     display: block;
@@ -260,3 +281,20 @@ body {
     border-bottom-left-radius: 5px;
     
 } */
+
+.calendario_flecha{
+    background-image: url(./images/flecha.png);
+    width: 7%;
+    background-size:auto 100%;
+    background-repeat: no-repeat;
+    padding: 1em 0;
+    margin: 1em 0 0 0;
+
+}
+.calendario_texto{
+    color: white;
+    text-align: center;
+}
+.calendario_numero{
+    font-size: 2.5rem;
+}
