--- a/estilos.css
+++ b/estilos.css
@@ -11,6 +11,8 @@ body {
 
 .tituloh1 {
     text-align: center;
+    font-weight: bolder;
+    font-size: 1.5rem;
 }
 
 .menu ul {
@@ -25,7 +27,6 @@ body {
 }
 .menu_li li:hover {
     background-color: red;
-    
     color: white;
     border-radius: 5%;
 }
@@ -56,7 +57,7 @@ body {
     text-align: center;
     position: relative;
     padding: 8em 0;
-    margin: 4em 0 0 0;
+    margin: 0.5em 0 0 0;
 }
 
 /*.howdy_cuadrado {
@@ -85,12 +86,18 @@ body {
 
 .tercer_contenedor {
     display: flex;
+    justify-content: center;
     text-align: center;
     gap: 5rem;
-    padding: 4rem;
-    margin: 0;
+    padding: 4rem; 
+    /* height: 25rem; */
+    /* margin: 0; */
 }
 
+.tercer_contenedor_columnas {
+    width: 22rem;
+    height: 22rem;
+}
 
 .logo_centro {
     box-shadow: 12px 0 15px -4px rgba(31, 73, 125, 0.3),  
@@ -100,7 +107,6 @@ body {
                 -12px 0px 0px 0px rgb(255 255 255 / 15%), 
                 12px 0px 32px 0px rgba(94, 92, 92, 0.15)*/
 }
- 
 
 
 .imagen_espacio {
@@ -168,6 +174,7 @@ body {
     background-color: white;
     padding-bottom: 2.5rem;
     border-bottom: 1px solid rgb(172, 168, 168);
+    
 }
 
 
@@ -180,12 +187,12 @@ body {
     font-weight: bold;
 } 
 
-.portafolio_imagenes_div h3, p {
+/* .portafolio_imagenes_div h3, p {
     padding: 1.5rem;
-    margin: 0;
+    margin: 0;  
+} */
 
-    
-}
+
 .portafolio_imagenes_div p {
     padding-top: 0.6rem;
     font-size: 1.2rem;
@@ -194,11 +201,18 @@ body {
     
 } 
 
-
+.portafolio_blog_h3_p {
+    padding: 2rem;
+}
 .portafolio_enlace_div {
     padding: 1.5rem;
 }
 
+.portafolio_enlace_div a {
+    padding: 1.3rem 1.8rem;
+    font-size: 1.2rem;
+    font-weight: bold;
+}
 .contenedor_blog {
     display: flex;
     justify-content: center;
@@ -213,30 +227,11 @@ body {
     padding: 1.5rem;
 }
 
-.blog_enlace li {
-    font-size: 1rem;
+.blog_enlace {
+    /* font-size: 1rem; */
     font-weight: bold;
     padding: 1rem 3rem; 
-    border: none;
-    border-radius: 4%;
-    list-style: none;
-}
-
-.blog_enlace li a {
-    text-decoration: none;
-    color: white;
-    font-size: 1.5rem;
-    position: relative;
     
-}
-
-.boton_blog1 {
-    background-color: red;
-    
-}
-
-.boton_blog2 {
-    background-color: black;
 }
 
 .blog_imagenes_div {
@@ -244,8 +239,31 @@ body {
     
 }
 
+.blog_enlace a {
+    text-decoration: none;
+    color: white;
+    font-size: 1.2rem;
+}
+
+.boton_blog1 {
+    background-color: red;
+    padding: 1rem 1.2rem;
+    border-radius: 5%;
+    
+}
+
+.boton_blog2 {
+    background-color: black;
+    padding: 1rem 1.2rem;
+    border-radius: 5%;
+}
+
+.fa-solid {
+    margin-right: 0.5rem;
+}
 
 
+/*
 .enlace_imagen1::before {
     content: url("./images/icono1.png");
     margin-right: 0.5rem;
@@ -256,7 +274,75 @@ body {
     content: url("./images/icono2.png");
     margin-right: 0.5rem;
     margin-left: -1.5rem;
+} */
+
+/* Estilos para el formulario de contacto */
+
+.formulario {
+    width: 30rem;
+    /* padding: 2rem; */
+    margin: 0 auto;
+    padding-bottom: 5rem;   
 }
+
+.etiqueta {
+    margin-top: 2rem
+}
+input:focus, textarea:focus {
+    outline: none;
+    border-bottom: 1px solid #272626;
+}
+input:hover, textarea:hover, select:hover{
+    background: rgb(240, 230, 230);
+    cursor: pointer;
+}
+
+input::placeholder, textarea::placeholder {
+    color: rgb(7, 7, 7);
+    font-size: 1.03rem;
+} 
+
+input, textarea {
+    color: black;
+    font-size: 1.01rem;
+}
+
+
+.input-formulario {
+    padding: 1.2rem;
+    background: #ddd;
+    opacity: 0.5;
+    border: none;
+    border-bottom: 1px solid #c2c2c2;
+    width: 100%;
+}
+
+textarea {
+    resize: none;
+}
+
+.boton-envio {
+    color: white;
+    background-color: red;
+    border-radius: 5%;
+    border: none;
+    padding: 0.9rem 1.8rem;
+    font-size: 1.02rem;
+    font-weight: bold;
+}
+
+.boton-envio:hover {
+    background-color: black;
+    cursor: pointer;
+}
+
+.etiqueta_boton {
+    text-align: center;
+    margin-top: 2.5rem;
+} 
+/* Fin de los estilos del formulario de contacto */
+
+
 
  .footer {
     background-color:rgb(37,33,34);
@@ -264,7 +350,7 @@ body {
 }
 .footer_h3 {
    padding: 1rem;
-   margin-left: 3rem;
+   margin-left: 4rem;
 }
 
 .footer_contenedor_uno {
@@ -304,14 +390,124 @@ body {
 
 }
 
+.calendario_border {
+    border-top: 0.5px solid #8584843f;
+}
+
 .calendario_parrafo p {
     color: #858484;
 }
 .footer_about{
-    padding: 1rem;
+    padding: 1rem 4rem 4rem 4rem;
+}
+
+.footer_about_text {
+    color: #858484;
+    line-height: 3rem;
+}
+
+.footer_about_text a {
+    color: white;
 }
 
 .footer_about img {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    width: 100%;
+}
+
+.footer_about_btn {
+    padding: 1rem;
+    border-radius: 5%;
+    background-color: rgb(213, 35, 73);
+}
+
+.footer_about_btn a {
+    color: white;
+    text-decoration: none;
+}
+
+.footer_contenedor_dos {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin: 0 5.5rem;
+    gap: 2.5rem;
+}
+
+.enlaces_footer a{
+    color: #858484;
+    line-height: 2.95rem;
+}
+
+.enlaces_footer h3 {
+    font-size: 2rem;
+}
+
+.enlaces_footer_border {
+    border-top: 0.5px solid #8584843f;
+    margin: 1rem 0;
+}
+
+.iconos_redes_sociales {
+    margin-bottom: 2rem;
+    margin-top: 3rem;
+}
+
+.redes_sociales_h3 {
+    font-size: 2rem; 
+}
+.redes_sociales_parrafo {
+    display: flex;
+    /* justify-content: space-between; */
+    gap: 1.5rem;
+    /* margin-top: 2rem; */
+    
+}
+
+.redes_sociales_parrafo_p{
+    color: #858484;
+    line-height: 2rem;
+}
+
+.mailto {
+    color: white;
+    text-decoration: underline;
+    margin-left: 1rem;
+}
+
+.phone {
+    margin-left: 0.7rem;
+    color: #858484;
+}
+/*Estilo de los iconos de Redes Sociales*/
+.fa-brands {
+    font-size: 3rem;
+    margin-right: 0.7rem;
+
+}
+
+.fa-square-facebook, .fa-linkedin{
+    color: rgb(170, 170, 170);
+}
+
+.fa-square-twitter {
+    color: rgb(109, 174, 196);
+}
+
+.fa-square-dribbble {
+    color: rgb(185, 35, 35);
+}
+
+.fa-square-tumblr {
+    color: rgb(47, 47, 187);
+}
+/* Fin estilos iconos redes sociales */
+
+
+.boton_javascript {
+    align-items: center;
+}
+.div_javascript {
+    display: flex;
+    justify-content: center;
 }
