--- a/estilos.css
+++ b/estilos.css
@@ -347,6 +347,7 @@ textarea {
  .footer {
     background-color:rgb(37,33,34);
     color: white;
+    padding-bottom: 5rem;
 }
 .footer_h3 {
    padding: 1rem;
@@ -511,3 +512,19 @@ textarea {
     display: flex;
     justify-content: center;
 }
+
+.ultimo_div {
+    /* margin-top: 4rem; */
+    width: 50%;
+    margin: 0 auto;
+
+}
+.ultimo_div_ul {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    padding: 0.5rem;
+    list-style: none;
+    background-color: #302f2f;
+}
+
